# DSAC

./: .gitignore  README.md  link_7scenes.py  link_all.sh
core/: CMakeLists.txt  Hypothesis.cpp  Hypothesis.h  cnn.h  cnn_softam.h  dataset.cpp  dataset.h  generic_io.h  lua_calls.h  maxloss.h  properties.cpp  properties.h  read_data.cpp  read_data.h  test_ransac.cpp  test_ransac_softam.cpp  train_obj.cpp  train_ransac.cpp  train_ransac_softam.cpp  train_score.cpp  types.h
core/lua/: MyL1Criterion.lua  train_obj.lua  train_obj_softam.lua  train_score.lua  train_score_softam.lua
